# inkanim

./: .gitignore  Cargo.toml  README.md  inkanim_biomoncheck.json  inkanim_connect_to_girl.json  inkwidget_biomoncheck.json  justfile
.github/workflows/: quality.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  cli.rs  main.rs  read.rs
crates/cli/src/generate/: args.rs  mod.rs
crates/cli/src/list/: args.rs  mod.rs
crates/cli/src/show/: args.rs  mod.rs
crates/cli/src/tree/: args.rs  mod.rs
crates/cli/src/whereis/: mod.rs
crates/cli/src/whois/: mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs
crates/types/src/ink/: mod.rs  reds.rs
crates/types/src/ink/anim/: mod.rs
crates/types/src/ink/widget/: font.rs  image.rs  implementation.rs  layout.rs  mod.rs  properties.rs
inkanim/: Cargo.toml
inkanim-types/: Cargo.toml
inkanim-types/src/ink/: conversion.rs
inkanim-types/src/ink/widget/: image.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: args.rs  cli.rs  inkanim.rs  lib.rs  main.rs  read.rs
src/ink/: anim.rs  conversion.rs  mod.rs  widget.rs
src/ink/anim/: conversion.rs  display.rs  implementation.rs  mod.rs
src/ink/widget/: font.rs  image.rs  implementation.rs  layout.rs  mod.rs  properties.rs
src/list/: args.rs  mod.rs
src/show/: args.rs  mod.rs
src/whereis/: args.rs  mod.rs
src/whois/: args.rs  mod.rs
