[package]
name = "inkanim"
version = "0.4.0"
edition = "2021"
authors = ["Roms1383"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "utils", "wolvenkit", "inkanim", "inkwidget"]
description = "CLI tool to quickly extract infos from JSON exports of .inkwidget and .inkanim"
categories = ["command-line-utilities"]
repository = "https://github.com/cyb3rpsych0s1s/inkanim"
exclude = [".vscode/*", ".idea/*", "screenshots/*", "*.json", ".github/*"]

[[bin]]
name = "inkanim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.13"
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
chrono = { version = "0.4.40", default-features = false, features = [
  "clock",
  "std",
  "serde",
] }
clap = { version = "4.5.35", features = ["derive"] }
term-table = "1.4.0"
