[workspace]
members = ["crates/types", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Roms1383"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cyb3rpsych0s1s/inkanim"
keywords = ["cli", "utils", "wolvenkit", "inkanim", "inkwidget"]

[workspace.dependencies]
clap = { version = "4.5.42" }
enum_dispatch = "0.3.13"
inkanim-types = { path = "crates/types" }
serde = { version = "1.0.219" }
serde-aux = "4.7.0"
serde_json = "1.0.142"
chrono = { version = "0.4.41", default-features = false }
