[workspace]
members = ["crates/macros", "crates/types", "crates/cli"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Roms1383"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cyb3rpsych0s1s/inkanim"
keywords = ["cli", "utils", "wolvenkit", "inkanim", "inkwidget"]

[workspace.dependencies]
clap = { version = "4.5" }
enum_dispatch = "0.3"
inkanim-macros = { path = "crates/macros" }
inkanim-types = { path = "crates/types", version = "0.8.0" }
serde = { version = "1.0" }
serde-aux = "4.7"
serde_json = "1.0"
chrono = { version = "0.4", default-features = false }
