[package]
name = "inkanim-macros"
version = "0.3.0"
edition = "2021"
authors = ["Roms1383"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
repository = "https://github.com/cyb3rpsych0s1s/inkanim"
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2"
proc-macro2 = "1"
quote = "1"
