[package]
name = "inkanim-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Types for .inkwidget and .inkanim"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch.workspace = true
inkanim-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-aux.workspace = true
chrono = { workspace = true, default-features = false, features = [
  "clock",
  "std",
  "serde",
] }
clap = { workspace = true, optional = true }

[features]
default = []
clap = ["dep:clap"]